--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -42,4 +42,5 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
   </body>
+  <script src="https://www.retainable.io/assets/retainable/rss-embed/retainable-rss-embed.js"></script>
 </html>
